# mumlib2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindOpus.cmake  FindSpeexDSP.cmake  Findasio.cmake  mumlib-config.cmake.in  mumlib2-config.cmake.in
include/: mumlib.hpp  mumlib2.h
include/mumlib/: Callback.hpp  Constants.hpp  Exceptions.hpp  Logger.hpp  Structs.hpp  enums.hpp
include/mumlib2/: callback.h  constants.h  enums.h  exceptions.h  logger.h  structs.h
include/mumlib2_private/: audio_decoder.h  audio_decoder_session.h  audio_encoder.h  audio_packet.h  crypto_state.h  mumlib2_private.h  transport.h  transport_ssl_context.h  varint.h
include/mumlib_private/: Audio.hpp  AudioDecoder.hpp  AudioDecoderSession.hpp  AudioEncoder.hpp  AudioPacket.hpp  AudioResampler.hpp  CryptState.hpp  MumlibPrivate.h  SslContextHelper.h  Transport.hpp  VarInt.hpp
src/: Audio.cpp  AudioDecoder.cpp  AudioDecoderSession.cpp  AudioEncoder.cpp  AudioPacket.cpp  AudioResampler.cpp  Callback.cpp  CryptState.cpp  Logger.cpp  MumlibPrivate.cpp  Transport.cpp  VarInt.cpp  audio_decoder.cpp  audio_decoder_session.cpp  audio_encoder.cpp  audio_packet.cpp  crypto_state.cpp  logger.cpp  mumlib.cpp  mumlib2.cpp  mumlib2_private.cpp  transport.cpp  varint.cpp
src_example/: mumlib2_example.cpp  mumlib_example.cpp
